--- a/index.html
+++ b/index.html
@@ -6,14 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>popup - modal</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="btn-cont">
+        <div class="container">
             <button>Click me</button>
+
         </div>
+        <div class="modal">
+            <div class="modal-content">
+                <h1>
+                    HELLO <i class="fa fa-hand-o-left" aria-hidden="true"></i></i>
+
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ornare mi urna. In viverra rhoncus
+                    mi, eu efficitur
+                    augue imperdiet ac. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+                    curae; Donec turpis
+                    eros, placerat non aliquam sit amet, aliquet vitae lectus. Quisque accumsan blandit rutrum.
+                </p>
+                <button class="modal-close">CLOSE ME</button>
+            </div>
+        </div>
+
     </div>
     <script src="scirpt.js"></script>
 </body>
