--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="container">
-            <button>Click me</button>
+            <button class="btn">Click me</button>
 
         </div>
         <div class="modal">
@@ -34,7 +34,7 @@
         </div>
 
     </div>
-    <script src="scirpt.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
